@@ -1,357 +1,179 @@
-# Jurassic World Reborn II
+![Jurassic World Reborn II Banner](https://i.pinimg.com/originals/1d/c9/41/1dc94136fe02dcfb8bcc07dc04f16a28.png)
 
-![Welcome to JWR II](https://i.pinimg.com/originals/1d/c9/41/1dc94136fe02dcfb8bcc07dc04f16a28.png)
+[![Discord](https://img.shields.io/discord/831803522281635850?label=Discord&color=393939&labelColor=4a94fb&style=for-the-badge&logo=discord&logoColor=white)](https://discord.gg/JMqZhxk7gA)
+[![Support me on Patreon](https://img.shields.io/endpoint.svg?url=https%3A%2F%2Fshieldsio-patreon.vercel.app%2Fapi%3Fusername%3DKnightDexx%26type%3Dpatrons&style=for-the-badge)](https://patreon.com/KnightDexx)
+[![Rent a server](https://img.shields.io/badge/Rent%20-a%20server-9cf?style=for-the-badge&logo=Codeforces&logoColor=cyan)](https://bisecthosting.com/KNIGHTDEXX)
+[![Projects](https://img.shields.io/badge/My-modpacks-red?style=for-the-badge&logo=curseforge)](https://www.curseforge.com/members/dexxknight1/projects)
+[![Support on Ko-fi](https://img.shields.io/static/v1?label=&message=Support%20me%20on%20Ko-fi&color=C0C0C0&labelColor=4a94fb&style=for-the-badge&logo=kofi&logoColor=white)](https://ko-fi.com/dexxknight)
 
-This is the official repository and issue-tracker for **J**urassic **W**orld **R**eborn **II** 1.12.2
+[![MMC Reviews](https://i.imgur.com/c1ji64K.png)](https://mmcreviews.com/all/modpacks/jurassic-world-reborn-ii/)
 
-[![Discord](https://img.shields.io/static/v1?label=&message=Join%20my%20server&logo=Discord&style=for-the-badge&logoColor=white&labelColor=f091f6&color=3C3C3C)](https://discord.gg/JMqZhxk7gA) [![Support me on Patreon](https://img.shields.io/endpoint.svg?url=https%3A%2F%2Fshieldsio-patreon.vercel.app%2Fapi%3Fusername%3DKnightDexx%26type%3Dpatrons&style=for-the-badge)](https://patreon.com/KnightDexx) [![Server](https://img.shields.io/badge/Rent%20-a%20server-9cf?style=for-the-badge&logo=Codeforces&logoColor=cyan)](https://bisecthosting.com/KNIGHTDEXX) [![Forge](https://img.shields.io/badge/My-modpacks-red?style=for-the-badge&logo=curseforge)](https://www.curseforge.com/members/dexxknight1/projects) [![ko-fi](https://img.shields.io/static/v1?label=&message=Support%20me%20on%20Ko-fi&color=C0C0C0&labelColor=4a94fb&style=for-the-badge&logo=kofi&logoColor=white)](https://ko-fi.com/Z8Z5EO6KT)
+## 🦕 Welcome to Jurassic World Reborn II 🦕
 
-<a href="https://mmcreviews.com/all/modpacks/jurassic-world-reborn-ii/"><img src="https://i.imgur.com/c1ji64K.png" alt="MMC Reviews" width="390" height="65" /></a>
+Step into a world where the past comes alive and ancient giants walk the earth once more. **Jurassic World Reborn II** invites you on an extraordinary expedition through time, where science meets prehistoric wonder and every corner of the world holds a new discovery waiting to be unearthed.
 
-## About the pack:
+This isn't just survival—it's a **paleontological adventure** of epic proportions. Extract DNA from ancient fossils, nurture creatures that haven't roamed the earth for millions of years, and build your own Jurassic sanctuary. From the depths of the ocean where marine reptiles glide silently, to the skies where Pteranodons soar majestically, every biome becomes a window into Earth's distant past.
 
-Imagine stepping into a vast, exciting world where dinosaurs roam, dungeons await discovery, and hidden treasures are just begging to be found. Add to this an enthralling mix of technology, magic, and prehistoric beauty, and you'll be living out a Jurassic adventure in Minecraft—but not just any Minecraft. We’re talking about a version featuring over 310 mods that amplify the experience beyond your wildest imaginations.
+But the prehistoric world is just the beginning. Venture through mystical dimensions, harness powerful technology, master arcane magics, and forge alliances with fellow explorers. Will you become a renowned paleontologist, a daring adventurer charting unknown territories, or a visionary architect creating the ultimate dinosaur park?
 
-Every mod enriches the environment with lush, sprawling landscapes filled with exotic flora and fauna. The ambient sounds of birds and other prehistoric creatures immerse players, while volcanoes, waterfalls, and geysers add grandeur to the terrain. Within these natural habitats, you'll encounter not just dinosaurs, but also prehistoric plants and animals that deepen your connection to this immersive world.
+With enhanced visuals, immersive ambient sounds, and a meticulously crafted ecosystem, every moment in this modded paradise feels like a true expedition. Volcanoes rumble in the distance, waterfalls cascade through lush jungles, and the calls of ancient creatures echo through the wilderness.
 
-You can spend your days as a conservationist, meticulously nurturing and protecting your creations, or as an adventurer, exploring the unexplored and taking risks. The beauty of this modded world lies in its balance, inviting different types of players to find their unique narrative amidst awe-inspiring scenery.
+**The age of dinosaurs has returned. Are you ready to answer the call?**
 
-This modded Jurassic Minecraft journey is more than a game; it’s an expedition where magic meets science, and the past meets the future. Whether you're riding a Pteranodon under a starlit sky or excavating fossils from forgotten caves, every moment in this prehistoric paradise is a reminder of the boundless creativity Minecraft offers.
+---
 
-So, grab your gear, install those mods, and step into a world where adventure, dinosaurs, and discovery await. The only limit is your imagination.
+## 💻 System Requirements
 
-To run this pack I'll recommend to allocate about to **12GB** amount of **RAM**.
+- **Recommended RAM:** 16GB to 20GB allocated to Minecraft
+- **Java:** Java 17+ required (use [optimized Java arguments](https://github.com/TheUsefulLists/UsefulMods/blob/main/JavaArgumentsOptimization.md) for best performance)
+- **OptiFine:** ❌ Incompatible with this modpack (shaders included via Oculus/Rubidium)
+- **Minecraft Version:** 1.20.1 Forge
 
-These **JVM** arguments will optimize things and hopefully sort out a lot of lag.
+---
 
-*<sub>-Xmx12G -Xms9G -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+UseNUMA -XX:+CMSParallelRemarkEnabled -XX:MaxTenuringThreshold=15 -XX:MaxGCPauseMillis=30 -XX:GCPauseIntervalMillis=150 -XX:+UseAdaptiveGCBoundary -XX:-UseGCOverheadLimit -XX:+UseBiasedLocking -XX:SurvivorRatio=8 -XX:TargetSurvivorRatio=90 -XX:MaxTenuringThreshold=15 -Dfml.ignorePatchDiscrepancies=true -Dfml.ignoreInvalidMinecraftCertificates=true -XX:+UseFastAccessorMethods -XX:+UseCompressedOops -XX:+OptimizeStringConcat -XX:+AggressiveOpts -XX:ReservedCodeCacheSize=2048m -XX:+UseCodeCacheFlushing -XX:SoftRefLRUPolicyMSPerMB=10000 -XX:ParallelGCThreads=2</sub>*
+![Features Banner](https://i.pinimg.com/originals/b4/98/40/b4984061a92d4685ff76ac6302586825.png)
 
-## Features:
-- About 310+ mods
-- Jurassic World Reborn (JWR) mod has to offer 91 different creatures such as dinosaurs, marine reptiles, prehistoric fish, hybrids...
-- Fossils and Archeology offers archaeological aspect for the people who like to explore more or collect beautiful new blocks
-- Beautiful Prehistoric Nature with a lot of trees, plants, fossils and many other creatures
-- 8 Prehistoric Dimensions: Precambrian, Cambrian, Ordovician, Silurian, Devonian, Carboniferous, Permian and Triassic
-- 9 Classic Dimensions like The Twilight Forest, Atum 2: Return to the Sands, The Aether II, The Erebus, The Betweenlands and more
-- Plenty of exploring stuff like Dungeons, Abandoned structures, Shipwrecks, Hidden Treasures...
-- Unique Bosses, Improvable Skills, Lootr looting system for every player on a server, LootBags
-- Best Magic mods: Electroblob's Wizardry, Astral Sorcery, Botania, PSI and more
-- Weapons, Armors and Tools: Spartan Weaponry, Techguns, Tinkers Construct, Modular Powersuits...
-- Storage: Applied Energistics 2, Refined Storage, Simple Storage Network, Storage Drawers, Iron Chests & Backpacks...
-- Top Technic mods: Thermal Series, Ender IO, Mekanism, Immersive Engineering, Industrial Foregoing, Draconic Evolution, Environmental Tech...
-- Good amount of Energy mods: Extreme Reactors, Solar Flux Reborn, Environmental Lunar Tech, Flux Networks...
+## 🎯 What Makes Jurassic World Reborn II Special?
 
-![bh banner](https://user-images.githubusercontent.com/78975662/209819136-982cc6b4-4b25-456f-a73e-36d28d32264d.png)
+### 🦖 Prehistoric Life & Dinosaurs
 
-Do you like to play **JWR 2** modpack with your friends and you need a hosting server for that? Well, not a problem at all just create a server at BisectHosting! Use my Promo code: **KNIGHTDEXX** and get **25% off** your first month for any of their gaming servers on **https://bisecthosting.com/KNIGHTDEXX** link. I recommend getting a plan with at **LEAST 8GB** of RAM for **JWR 2** modpack.
+- **545+ Mods** carefully selected for the ultimate Jurassic experience
+- [Jurassic Reborn (JR)](https://www.curseforge.com/minecraft/mc-mods/jurassic-reborn) - Featuring **108 different creatures** including dinosaurs, marine reptiles, prehistoric fish, and genetic hybrids
+- [Fossils & Archeology](https://www.curseforge.com/minecraft/mc-mods/fossils) - Over **60+ prehistoric creatures** that can be revived through archaeological exploration
+- Extract DNA, incubate eggs, and raise your own prehistoric companions
+- Create custom habitats and observe realistic dinosaur behaviors
 
-## Modlist:
-<ul>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/betterfps">BetterFps (by Guichaguri)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mcjtylib">McJtyLib (by McJty)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/environmental-lunartech">Environmental Lunar Tech (by ValkyrieofNight)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/clumps">Clumps (by Jaredlll08)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/extradiscs">ExtraDiscs (by geniii)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/natures-compass">Nature's Compass (by Chaosyr)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/quark">Quark (by Vazkii)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/ranged-pumps">Ranged Pumps (by raoulvdberge)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/chisels-bits">Chisels & Bits - For Forge (by AlgorithmX2)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/cyclic">Cyclic (by Lothrazar)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/modern-warfare-cubed">Modern Warfare Cubed (by Paneedah)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/autoreglib">AutoRegLib (by Vazkii)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/quantumstorage">QuantumStorage (by Gigabit101)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-engineering">Immersive Engineering (by BluSunrize)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/codechicken-lib-1-8">CodeChicken Lib 1.8.+ (by covers1624)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/redstone-flux">Redstone Flux (by TeamCoFH)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/better-animal-models">Better Animal Models (by cybercat5555)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/fps-reducer">FPS Reducer (by bre2el)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/pretty-beaches">Pretty Beaches (by BlayTheNinth)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/llibrary">LLibrary (by MCModDev)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-roofs">Macaw's Roofs (by sketch_macaw)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/fastfurnace">FastFurnace (by Shadows_of_Fire)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism">Mekanism (by bradyaidanc)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/enchantment-descriptions">Enchantment Descriptions (by DarkhaxDev)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/pams-harvestcraft">Pam's HarvestCraft (by pamharvestcraft)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/architecturecraft-tridev">ArchitectureCraft - TridentMC Version (by darkevilmac)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/prehistoric-nature-ordovician-dimension">Prehistoric Nature Ordovician Dimension (by Aecht_Rob)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/animalnet">AnimalNet (by MrMarnic)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/universal-tweaks">Universal Tweaks (by ACGaming)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/performant">Performant (by someaddon)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/baubles">Baubles (by Azanor13)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/tinkers-construct">Tinkers Construct (by mDiyo)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/supermartijn642s-core-lib">SuperMartijn642's Core Lib (by SuperMartijn642)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/journeymap">JourneyMap (by techbrew)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/zerocore">ZeroCore 2 (by ZeroNoRyouki)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-innovation">Thermal Innovation (by TeamCoFH)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/simply-light">Simply Light (by Flanks255)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/cyclops-core">Cyclops Core (by kroeser)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/random-things">Random Things (by Lumien231)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/sound-filters">Sound Filters (by Tmtravlr)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/gunpowderlib">GunpowderLib (by Jacky)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/jei">Just Enough Items (JEI) (by mezz)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/lootr">Lootr (Forge & NeoForge) (by Noobanidus)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/solar-flux-reborn">Solar Flux Reborn (by Zeith)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/decocraft">Decocraft (by RazzleberryFox)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/more-overlays">More Overlays (by feldim245)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/what-fluid-fix">WHAT - Fluid Fix (by BordListian)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mystical-agradditions">Mystical Agradditions (by BlakeBr0)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-foundation">Thermal Foundation (by TeamCoFH)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/wireless-crafting-terminal">Wireless Crafting Terminal (by TheRealp455w0rd)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/biomeinfo">BiomeInfo (by bl4ckscor3)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/better-advancements">Better Advancements (by way2muchnoise)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/moretweaker">MoreTweaker (by noeppinoeppi)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/advanced-backups">Advanced Backups (by HeatherWhite)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/texture-packs/faithful32-modded">Faithful32 Modded (by anders0nmat)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/ae2-extended-life">AE2 Unofficial Extended Life (by notmywing)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/better-third-person">Better Third Person (by Socolio)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/valkyrielib">ValkyrieLib (by ValkyrieofNight)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-reactors">Just Enough Reactors (by BrainStone)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/bookshelf">Bookshelf (by DarkhaxDev)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/supermartijn642s-config-lib">SuperMartijn642's Config Lib (by SuperMartijn642)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-harvestcraft">Just Enough HarvestCraft (JEHC) (by mrapplexz)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism-generators">Mekanism Generators (by bradyaidanc)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/red-core">Red Core (by Desoroxxx)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/initial-inventory">Initial Inventory (by Jaredlll08)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/bonsai-trees">Bonsai Trees 3 (by davenonymous)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/paintings">Paintings ++ (by AbsolemJackdaw)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/loading-screens">Loading Screens (by bloodnbonesgaming)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/prehistoric-nature-precambrian-dimension">Prehistoric Nature Precambrian Dimension (by Aecht_Rob)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/wi-zoom">WI Zoom (by alexander9892)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/ambience-music-mod">Ambience (Music Mod) (by Vazkii)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/wither-skeleton-tweaks">Wither Skeleton Tweaks (by Shadows_of_Fire)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/snad">Snad (by TheRoBrit)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/block-drops-jei-addon">Block Drops (JEI Addon) (by KidsDontPlay)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/inventory-tweaks">Inventory Tweaks [1.12 only]  (by JimeoWan)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/simply-jetpacks-2">Simply Jetpacks 2 (by Tomson124)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mending-gems">Mending Gems (by davidmaamoaix)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/so-many-enchantments">So Many Enchantments (by ShelterRin)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/iron-backpacks">Iron Backpacks (by gr8pefish)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mod-name-tooltip">Mod Name Tooltip (by mezz)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-energistics-jee">Just Enough Energistics (JEE) (by TheRealp455w0rd)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/openblocks">OpenBlocks (by OpenMods)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-expansion">Thermal Expansion (by TeamCoFH)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/equipment-tooltips">Equipment Tooltips (by SilentChaos512)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/farsight">Farsight [Forge/Neo] (by someaddon)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/dynamic-surroundings">Dynamic Surroundings (by OreCruncher)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/netherportalfix">NetherPortalFix (by BlayTheNinth)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/treasure2">Treasure2 (by gottsch)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/orelib">OreLib (by OreCruncher)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/tesla-core-lib">Tesla Core Lib (by face_of_cat)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/astral-sorcery">Astral Sorcery (by HellFirePvP)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/advancement-plaques">Advancement Plaques [Forge] (by Grend_G)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/extra-cells-2-samlam140330s-fork">ExtraCells2 - SamLam140330's Fork (by SamLam140330)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/better-diving">Better Diving (by meldexun)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/fermiumbooter">FermiumBooter (by fonnymunkey)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/prehistoric-nature-cambrian-dimension">Prehistoric Nature Cambrian Dimension (by Aecht_Rob)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/dark-utilities">Dark Utilities (by DarkhaxDev)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/buildcraft">Buildcraft (by Covert_Jaguar)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/appleskin">AppleSkin (by squeek502)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/randomtweaks">RandomTweaks (by TheRandomLabs)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/actually-additions">Actually Additions (by Ellpeck)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mystical-agriculture">Mystical Agriculture (by BlakeBr0)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/top-extras">TOP Extras (by Tech22)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/baubley-heart-canisters">Baubley Heart Canisters (by traverse_joe)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/chisel">Chisel (by tterrag1098)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/morpheus">Morpheus (by Quetzi)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/better-builders-wands">Better Builder's Wands (by Portablejim)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/instantunify">InstantUnify (by KidsDontPlay)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/project-intelligence">Project Intelligence (by brandon3055)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/super-sound-muffler-revived">Super Sound Muffler: Revived (by Firstnecron)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/spartan-shields">Spartan Shields (by ObliviousSpartan)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/netherending-ores">Netherending Ores (by ic_trab)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-dynamics">Thermal Dynamics (by TeamCoFH)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/cosmetic-armor-reworked">Cosmetic Armor Reworked (by LainMI)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/wireless-pattern-terminal">Wireless Pattern Terminal (by TheRealp455w0rd)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/scaling-health">Scaling Health (by SilentChaos512)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/torchmaster">Torchmaster (by xalcon)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/custom-backgrounds">Custom Backgrounds (by Lumien231)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/cofh-world">CoFH World (by TeamCoFH)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/shaders/complementary-unbound">Complementary Shaders - Unbound (by EminGT)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/fire-spread-tweaks">Fire Spread Tweaks (by Serilum)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mtlib">MTLib (by Jaredlll08)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/quantumflux">QuantumFlux (by FantasyTeddy)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/no-mob-spawning-on-trees">No Mob Spawning on Trees (by oldjunyi)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/shut-up-model-loader">Shut Up, Model Loader! (by phantamanta44)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/bisecthosting-server-integration-menu-forge">BisectHosting Server Integration Menu [FORGE] (by BisectHosting)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/yungs-better-mineshafts-forge">YUNG's Better Mineshafts (Forge) (by YUNGNICKYOUNG)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/ctm">ConnectedTexturesMod (by tterrag1098)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/storage-drawers">Storage Drawers (by Texelsaur)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/my-server-is-compatible">My Server Is Compatible (by focamacho)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/easy-shulker-access">Easy Shulker Access (by Furgl)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/wanionlib">WanionLib (by WanionCane)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/in-control">In Control! (by McJty)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/patchouli">Patchouli (by Vazkii)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/camera-mod">Camera Mod (by henkelmax)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/kleeslabs">KleeSlabs (by BlayTheNinth)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/bibliocraft">BiblioCraft (by Nuchaz)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/brandons-core">Brandon's Core (by brandon3055)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/extra-utilities">Extra Utilities (by RWTema)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/nothirium">Nothirium (by meldexun)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-ultimine-forge">FTB Ultimine (Forge) (by FTB)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/enhancedp2p">Enhanced P2P (by Cyber)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-bridges">Macaw's Bridges (by sketch_macaw)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mouse-tweaks">Mouse Tweaks (by YaLTeR)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/reauth">ReAuth (by TechnicianLP)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/more-sound-config">Sound Device Options (by ichttt)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/prehistoric-nature-triassic-dimension">Prehistoric Nature Triassic Dimension (by Aecht_Rob)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/extra-bit-manipulation">Extra Bit Manipulation (by Phylogeny)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/wireless-interface-terminal">AE2 Wireless Interface Terminal (by TheRealp455w0rd)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/prehistoric-nature-permian-dimension">Prehistoric Nature Permian Dimension (by Aecht_Rob)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/durability-tooltip">Durability Tooltip (by SuperMartijn642)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/applecore">AppleCore (by squeek502)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/weaker-spiderwebs">Weaker Spiderwebs (by Serilum)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-paths-and-pavings">Macaw's Paths and Pavings (by sketch_macaw)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/prehistoric-nature-decorations">Prehistoric Nature Decorations (by Aecht_Rob)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/malisisdoors">MalisisDoors (by Ordinastie)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/openmodslib">OpenModsLib (by OpenMods)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/better-biome-blend">Better Biome Blend (by FionaTheMortal)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mantle">Mantle (by mDiyo)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/whoosh">Whoosh (by Imba_Knugel)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/chameleon">Chameleon (by Texelsaur)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/loot-capacitor-tooltips">Loot Capacitor Tooltips (by tfarecnim)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/roguelike-dungeons">Roguelike Dungeons (by Greymerk)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/environmental-tech">Environmental Tech (by ValkyrieofNight)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/biomes-o-plenty">Biomes O' Plenty (by Forstride)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/ptrlib">PTRLib (by RazzleberryFox)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/splash-logo-color-fix">Splash Logo Color Fix (by modmuss50)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mrcrayfishs-vehicle-mod">MrCrayfish's Vehicle Mod (by MrCrayfish)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/cooking-for-blockheads">Cooking for Blockheads (by BlayTheNinth)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/controlling">Controlling (by Jaredlll08)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/fermiumasm">FermiumASM (by fonnymunkey)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/vintagefix">VintageFix (by embeddedt)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mixin-0-7-0-8-compatibility">Mixin 0.7-0.8 Compatibility (by NotStirred)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/prehistoric-nature-carboniferous-dimension">Prehistoric Nature Carboniferous Dimension (by Aecht_Rob)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/default-options">Default Options (by BlayTheNinth)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/gottschcore">GottschCore (by gottsch)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/ender-io">Ender IO (by crazypants_mc_the_second)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/the-one-probe">The One Probe (by McJty)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/dank-null">/dank/null (by TheRealp455w0rd)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/custom-main-menu">Custom Main Menu (by Lumien231)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/jurassic-world-reborn-mod">Jurassic World Reborn Mod (by vitiatejwr)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-utilities-forge">FTB Utilities (Forge) (by FTB)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/discordrp">Discord Rich Presence (by ItsDizzy40)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/bring-me-the-rings">Bring Me The Rings! (by zabi94)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/engineers-decor">Engineer's Decor (by wilechaote)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mrtjpcore">MrTJPCore (by MrTJP)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/integration-foregoing">Integration Foregoing (by Jacky)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mrcrayfish-furniture-mod">MrCrayfish's Furniture Mod (by MrCrayfish)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/building-gadgets">Building Gadgets (by Direwolf20)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/hole-filler-mod">Hole Filler Mod (by DannyBoyThomas)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/spartan-weaponry">Spartan Weaponry (by ObliviousSpartan)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/redirectionor-retro">Redirectionor [Retro] (by Hileb)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/collective">Collective (by Serilum)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/planefix">PlaneFix (by Shadows_of_Fire)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/ambientsounds">AmbientSounds 6 (by CreativeMD)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/common-capabilities">Common Capabilities (by kroeser)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/rftools">RFTools (by McJty)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/aqua-acrobatics">Aqua Acrobatics [Forge] (by embeddedt)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mixinbootstrap">MixinBootstrap (by LX_Gaming)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/blockcraftery">Blockcraftery (by EpicSquid315)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/cucumber">Cucumber Library (by BlakeBr0)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/crafttweaker">CraftTweaker (by Jaredlll08)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/villager-names">Villager Names (by Serilum)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/pams-cookables">Pam's Cookables - Pam's Harvestcraft Addon (by BloodWorkXGaming)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/serializationisbad">SerializationIsBad (by Dogboy21)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/xnet">XNet (by McJty)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mysticallib">MysticalLib (by Noobanidus)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/legendary-tooltips">Legendary Tooltips [Forge] (by Grend_G)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/yarcf">Yet Another Recipe Conflict Fixer (YARCF)  (by SirOMGitsYOU)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/draconic-evolution">Draconic Evolution (by brandon3055)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/extreme-reactors">Extreme Reactors (by ZeroNoRyouki)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/wireless-fluid-terminal">AE2 Wireless Fluid Terminal (by TheRealp455w0rd)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/prehistoric-nature-devonian-dimension">Prehistoric Nature Devonian Dimension (by Aecht_Rob)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/tinkers-jei">Tinker's JEI (by possible_triangle)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/artifacts">Artifacts (by ochotonida)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/login-shield">Login Shield (by Glasspelican)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/stacksize">Stacksize (by wwrpg1)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/sit">Sit (by bl4ckscor3)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/chest-transporter">Chest Transporter (by cubex2)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/open-glider">Open Glider (by gr8pefish)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/fastflyblockbreaking">FastFlyBlockBreaking (by barteks2x)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/reid">Roughly Enough IDs (by Lily)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/botania">Botania (by Vazkii)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/rftools-power">RFTools Power (by McJty)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/tips">Tips (by DarkhaxDev)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/malisiscore">MalisisCore (by Ordinastie)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/exotic-birds">Exotic Birds (by ThePavoReality)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/betteranimalsplus">Better Animals Plus (by cybercat5555)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/redstone-arsenal">Redstone Arsenal (by TeamCoFH)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/angel-ring-to-bauble">Angel Ring To Bauble (by Portablejim)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/containerfix">ContainerFix (by Tschipp)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/texture-packs/faithful-32x">Faithful 32x (by Faithful_Resource_Pack)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/nevoka-core">Nevoka Core (by JayJay1989BE)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/placebo">Placebo (by Shadows_of_Fire)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/akashic-tome">Akashic Tome (by Vazkii)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/comforts">Comforts (Fabric/Forge/Quilt) (by TheIllusiveC4)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/randompatches-forge">RandomPatches (Forge) (by TheRandomLabs)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-library-legacy-forge">FTB Library (Forge) (Legacy) (by FTB)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/ender-io-endergy">Ender IO Endergy (by tterrag1098)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/iceberg">Iceberg [Forge] (by Grend_G)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/shadowfacts-forgelin">Shadowfacts' Forgelin (by ShadowfactsDev)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/ae2-stuff">AE2 Stuff (by bdew)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/tinkers-tool-leveling">Tinkers' Tool Leveling (by bonusboni)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/silent-lib">Silent Lib (silentlib) (by SilentChaos512)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/betterbedrockgen">BetterBedrockGen (by Gigabit101)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/iron-chests">Iron Chests (by ProgWML6)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/ender-storage-1-8">Ender Storage 1.8.+ (by covers1624)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/entityculling">Entity Culling Fabric/Forge (by tr7zw)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/storage-drawers-extras">Storage Drawers Extras (by Texelsaur)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/configanytime">ConfigAnytime (by CleanroomMC)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/prefab">Prefab (by wuestman)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/bad-wither-no-cookie-reloaded">Bad Wither No Cookie - Reloaded (by Kreezxil)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-resources-jer">Just Enough Resources (JER) (by way2muchnoise)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/bdlib">BdLib (by bdew)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/antighost">AntiGhost (by Giselbaer)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/corail-tombstone">Corail Tombstone (by Corail_31)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/water-strainer">Water Strainer (by Ruuubi)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/moar-tinkers">Moar Tinkers (by AshuraNoYami)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/xp-from-harvest">XP From Harvest (by ReaIGecko)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/alfheim-lighting-engine">Alfheim Lighting Engine (by Desoroxxx)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/atum">Atum 2: Return to the Sands (by Shadow)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/cb-multipart">CB Multipart (by covers1624)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/modtweaker">ModTweaker (by Jaredlll08)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/client-tweaks">Client Tweaks (by BlayTheNinth)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/dynamic-surroundings-huds">Dynamic Surroundings: HUDs (by OreCruncher)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/prehistoric-nature">Prehistoric Nature (by Aecht_Rob)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/adventure-tools">Adventure Tools (by SyntacticSplenda)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/yungs-better-caves">YUNG's Better Caves (Forge) (by YUNGNICKYOUNG)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/security-craft">Security Craft (by Geforce132)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-fences-and-walls">Macaw's Fences and Walls (by sketch_macaw)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mixin-booter">MixinBooter (by CleanroomMC)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/prehistoric-nature-silurian-dimension">Prehistoric Nature Silurian Dimension (by Aecht_Rob)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/bnbgaminglib">BNBGamingLib (by bloodnbonesgaming)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/waystones">Waystones (by BlayTheNinth)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/unidict">UniDict (by WanionCane)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-windows">Macaw's Windows (by sketch_macaw)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/environmental-materials">Environmental Materials (by ValkyrieofNight)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/endercore">EnderCore (by tterrag1098)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/simple-storage-network">Simple Storage Network (by Lothrazar)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/fossils">Fossils and Archeology: Revival (by ddinodan)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/huntersreturn">Hunter'sReturn (by bagu_chan500)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/smooth-font">Smooth Font (by bre2el)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/resource-loader">Resource Loader (by Lumien231)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/obfuscate">Obfuscate (by MrCrayfish)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/crafting-tweaks">Crafting Tweaks (by BlayTheNinth)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/jei-integration">JEI Integration (by SnowShock35)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/cofh-core">CoFH Core (by TeamCoFH)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/waim-what-am-i-missing">WAIM - What am I missing? (by Jaredlll08)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/reborncore">Reborn Core (by modmuss50)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/industrial-foregoing">Industrial Foregoing (by Buuz135)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/rftools-control">RFTools Control (by McJty)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mmmmmmmmmmmm">MmmMmmMmmMmm (Target Dummy) (by MehVahdJukaar)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/faster-ladder-climbing">Faster Ladder Climbing (by maddachshund)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/spice-of-life-carrot-edition">Spice of Life: Carrot Edition (by lordcazsius)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/blur">Blur (by tterrag1098)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/scannable">Scannable (by Sangar)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/particle-culling">Particle Culling (by bl4ckscor3)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/prehistoric-nature-jurassic-dimension">Prehistoric Nature Jurassic Dimension (by Aecht_Rob)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/apotheosis">Apotheosis (by Shadows_of_Fire)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/creativecore">CreativeCore (by CreativeMD)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/top-addons">TOP Addons (by DrManganese)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/p455w0rds-library">p455w0rd's Library (by TheRealp455w0rd)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/jetif">Just Enough Throwing In Fluids (JETIF) (by Lykrast)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/prehistoric-nature-fossils">Prehistoric Nature Fossils (by Aecht_Rob)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/flux-networks">Flux Networks (by sonar_sonic)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/ae2wtlib">AE2 Wireless Terminal Library (by TheRealp455w0rd)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/renderlib">RenderLib (by meldexun)</a></li>
-</ul>
+### 🌍 Dimensions to Explore
+
+- [The Twilight Forest](https://legacy.curseforge.com/minecraft/mc-mods/the-twilight-forest) - Enchanted woodland realm filled with mysteries and ancient ruins
+- [The Undergarden](https://legacy.curseforge.com/minecraft/mc-mods/the-undergarden) - Vast underground dimension beneath bedrock with unique ecosystems
+- [Blue Skies](https://legacy.curseforge.com/minecraft/mc-mods/blue-skies) - Two celestial realms of Everbright and Everdawn with floating islands
+- And more dimensions filled with prehistoric secrets and treasures!
+
+### 🔍 Exploration & Adventure
+
+- Discover hidden [Treasures](https://legacy.curseforge.com/minecraft/mc-mods/treasure2) buried throughout the world
+- Explore mysterious Dungeons and Abandoned Structures
+- Uncover Shipwrecks and underwater archaeological sites
+- [Lootr](https://legacy.curseforge.com/minecraft/mc-mods/lootr) - Personalized loot system for every player on multiplayer servers
+- [Reskillable](https://legacy.curseforge.com/minecraft/mc-mods/reskillable-reimagined) - Up to **8 custom skills** for character progression
+
+### ✨ Magic & Mysticism
+
+- [Botania](https://legacy.curseforge.com/minecraft/mc-mods/botania) - Nature magic and mana manipulation
+- [Ars Nouveau](https://legacy.curseforge.com/minecraft/mc-mods/ars-nouveau) - Customizable spell crafting system
+- [PSI](https://legacy.curseforge.com/minecraft/mc-mods/psi) - Programmable spell creation with visual programming
+- Harness magical energies to enhance your prehistoric expeditions
+
+### ⚔️ Weapons, Armor & Tools
+
+- [Spartan Weaponry](https://legacy.curseforge.com/minecraft/mc-mods/spartan-weaponry) - Diverse arsenal of melee and ranged weapons
+- [Timeless and Classics Zero Guns](https://legacy.curseforge.com/minecraft/mc-mods/timeless-and-classics-zero) - Modern firearms for protection
+- [Tinkers' Construct](https://legacy.curseforge.com/minecraft/mc-mods/tinkers-construct) - Custom tool forging and material combinations
+- Defend yourself against aggressive prehistoric predators and rival explorers
+
+### 🏛️ Decoration & Building
+
+- [Decocraft](https://legacy.curseforge.com/minecraft/mc-mods/decocraft) - Thousands of decorative objects for your base
+- [Engineer's Decor Ported](https://legacy.curseforge.com/minecraft/mc-mods/engineers-decor-ported) - Industrial-themed decorations
+- [Chisel Reborn](https://legacy.curseforge.com/minecraft/mc-mods/chisel-reborn) - Hundreds of block variations
+- [Chisels & Bits](https://legacy.curseforge.com/minecraft/mc-mods/chisels-bits) - Micro-block building for intricate designs
+- [Building But Better](https://legacy.curseforge.com/minecraft/mc-mods/building-but-better) - Enhanced construction options
+- [Bibliocraft Legacy](https://legacy.curseforge.com/minecraft/mc-mods/bibliocraft-legacy) - Furniture and storage solutions
+- Build the ultimate dinosaur park, research facility, or prehistoric museum!
+
+### 💎 Unique Artifacts & Relics
+
+- [Artifacts](https://legacy.curseforge.com/minecraft/mc-mods/artifacts) - Powerful wearable items with special abilities
+- [Relics](https://legacy.curseforge.com/minecraft/mc-mods/relics-mod) - Ancient treasures with mystical properties
+- Uncover legendary items that grant extraordinary powers
+- Combine artifacts to create the ultimate explorer's loadout
+
+### 📦 Storage Solutions
+
+- [Applied Energistics 2](https://legacy.curseforge.com/minecraft/mc-mods/applied-energistics-2) - Advanced digital storage network
+- [Tom's Simple Storage](https://legacy.curseforge.com/minecraft/mc-mods/toms-storage) - Easy-to-use item management
+- [Storage Drawers](https://legacy.curseforge.com/minecraft/mc-mods/storage-drawers) - Compact bulk storage
+- [Sophisticated Storage](https://legacy.curseforge.com/minecraft/mc-mods/sophisticated-storage) - Upgradable storage containers
+- [Sophisticated Backpacks](https://legacy.curseforge.com/minecraft/mc-mods/sophisticated-backpacks) - Portable storage with upgrades
+- Organize your fossils, DNA samples, and prehistoric discoveries efficiently
+
+### ⚙️ Technology & Automation
+
+- [Create](https://legacy.curseforge.com/minecraft/mc-mods/create) - Mechanical contraptions and kinetic energy
+- [Thermal Series](https://legacy.curseforge.com/minecraft/mc-mods/thermal-foundation) - Power generation and ore processing
+- [Ender IO](https://legacy.curseforge.com/minecraft/mc-mods/ender-io) - Conduits and machine automation
+- [Mekanism](https://legacy.curseforge.com/minecraft/mc-mods/mekanism) - Advanced machinery and digital mining
+- [Immersive Engineering](https://legacy.curseforge.com/minecraft/mc-mods/immersive-engineering) - Multiblock machines and wiring
+- [Industrial Foregoing](https://legacy.curseforge.com/minecraft/mc-mods/industrial-foregoing) - Resource processing and farming
+- [Draconic Evolution](https://legacy.curseforge.com/minecraft/mc-mods/draconic-evolution) - Endgame technology and power
+- [Void Miners](https://legacy.curseforge.com/minecraft/mc-mods/void-miners) - Automated resource extraction
+- Automate your dinosaur breeding programs and resource gathering!
+
+### ⚡ Energy Generation
+
+- [Extreme Reactors](https://legacy.curseforge.com/minecraft/mc-mods/extreme-reactors) - Nuclear power for massive energy needs
+- [Advanced Generators](https://legacy.curseforge.com/minecraft/mc-mods/advanced-generators) - Multi-fuel power systems
+- [Solar Flux Reborn](https://legacy.curseforge.com/minecraft/mc-mods/solar-flux-reborn) - Clean solar energy
+- [Flux Networks](https://legacy.curseforge.com/minecraft/mc-mods/flux-networks) - Wireless energy transfer
+- Power your research facilities and containment systems
+
+---
+
+## 📊 Modpack Statistics
+
+- **545+ Mods** carefully selected and configured
+- **108 Prehistoric Creatures** from Jurassic Reborn
+- **60+ Revivable Creatures** from Fossils & Archeology
+- **3 Major Dimensions** plus The Nether and The End
+- **8 Custom Skills** via Reskillable
+- **Countless Structures** and exploration opportunities
+- **Professional Quality** - Optimized for smooth gameplay
+
+---
+
+![Server Hosting Banner](https://i.pinimg.com/originals/65/32/56/6532567a92d1b504e57aafc36700abdb.png)
+
+[![BisectHosting Banner](https://www.bisecthosting.com/partners/custom-banners/802e623b-03cd-4476-8269-0589d107b142.webp)](https://bisecthosting.com/KNIGHTDEXX)
+
+Want to play **Jurassic World Reborn II** with your friends? Get a high-performance server at **BisectHosting**!
+
+#### 💻 Server Requirements
+
+- **Minimum:** 14GB RAM
+- **Recommended:** 16GB RAM for optimal performance
+- **Expected Performance:** Stable 20 TPS with multiple players exploring
+
+#### 🎁 Special Offer
+
+Use promo code: **KNIGHTDEXX** and get **25% off** your first month for any gaming server!
+
+👉 **[Get your server here](https://bisecthosting.com/KNIGHTDEXX)**
+
+---
+
+## 🔗 Important Links
+
+- 📋 **Full Changelog:** [GitHub Repository](https://github.com/DexxKnight1/Jurassic-World-Reborn-II)
+- 🐛 **Report Bugs:** [GitHub Issues](https://github.com/DexxKnight1/Jurassic-World-Reborn-II/issues)
+- 💬 **Discord Community:** [Join us on Discord](https://discord.gg/JMqZhxk7gA)
+- ⚡ **Performance Tips:** [Optimized Java Arguments](https://github.com/TheUsefulLists/UsefulMods/blob/main/JavaArgumentsOptimization.md)
+- 📖 **Wiki & Guides:** Check Discord for community-created guides
+
+---
+
+![Note Icon](https://i.pinimg.com/originals/ae/21/a6/ae21a64e10e79031318fdd5857f2f1b5.png) **Note:** *You do not need to ask for my permission to stream or create videos of this modpack. Feel free to share your prehistoric adventures!*
+
+---
+
+## 🦕 The Age of Dinosaurs Has Returned 🦕
+
+Ancient giants walk the earth once more. Fossils whisper secrets of the past. Dimensions await exploration.
+
+**Will you become the ultimate paleontologist?**
+
+**Will you build the greatest dinosaur park the world has ever seen?**
+
+### 🚀 DOWNLOAD NOW AND BEGIN YOUR JURASSIC ADVENTURE! 🚀
+
+**⭐ Leave a star • 💬 Join Discord • 🦖 Share your dinosaurs • 💜 Support on Patreon**
